fixed about us content overlap

--- a/css/index.css
+++ b/css/index.css
@@ -49,11 +49,6 @@ p {
 p.small {
   font-size: 1.5rem;
 }
-.parallax {
-  height: 70%;
-  width: 100%;
-  position: relative;
-}
 .slider {
   width: 100vw;
   padding-top: 3rem;
@@ -206,7 +201,7 @@ p.small {
 header.content-container {
   max-width: 1080px;
   padding: 0 2rem;
-  height: 100%;
+  height: 70vh;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -308,7 +303,7 @@ header.content-container .hero-content .search-form input[type="button"] {
 }
 header.content-container .hero-background {
   width: 100%;
-  height: 100%;
+  height: 70vh;
   position: absolute;
   right: 0;
   z-index: -1;
@@ -404,7 +399,7 @@ header.content-container .hero-background .image-wrapper img {
   }
 }
 .choose-experience {
-  padding-top: 4rem;
+  padding-top: 2rem;
 }
 @media (min-width: 992px) {
   .choose-experience {
@@ -418,9 +413,11 @@ header.content-container .hero-background .image-wrapper img {
   padding-left: 0;
   padding-right: 0;
 }
-.about-us .excerpt {
-  height: 300px;
-  background: rgba(161, 211, 162, 0.1);
+@media (min-width: 992px) {
+  .about-us .excerpt {
+    height: 300px;
+    background: rgba(161, 211, 162, 0.1);
+  }
 }
 .about-us .excerpt p {
   line-height: 1.6;
@@ -428,9 +425,12 @@ header.content-container .hero-background .image-wrapper img {
   padding: 1rem 3rem 3.5rem;
   margin: 0 auto;
   background: #fff;
+  text-align: left;
 }
-.about-us .content-wrapper {
-  margin-top: -180px;
+@media (min-width: 992px) {
+  .about-us .content-wrapper {
+    margin-top: -180px;
+  }
 }
 .about-us .content-wrapper video {
   width: 100%;
