--- a/less/header.less
+++ b/less/header.less
@@ -2,7 +2,7 @@
 header.content-container {
     max-width: 1080px;
     padding: 0 2rem;
-    height: 100%;
+    height: 70vh;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -108,7 +108,7 @@ header.content-container {
 
     .hero-background {
         width: 100%;
-        height: 100%;
+        height: 70vh;
         position: absolute;
         right: 0;
         z-index: -1;
